Added: More contents to index.file

--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
   </label>
 <button>calculate</button>
 
-<div id="result">
-  
+<div class="result-box">
+  <p id="result">Result:</p>
+  <div id="output">
+  </div>
 </div>
 
   <script src="./index.js"></script>
