Modified both index and CSS file by adding more contents

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <option value="divide">divide</option>
     </select>
   </label>
-<button>calculate</button>
+<button type="button">calculate</button>
 
 <div class="result-box">
   <p id="result">Result:</p>
